# markov-tweets-japanese

./: .gitignore  pyproject.toml
markov_tweets_japanese/: __init__.py  learn.py  main.py  markov.py  talk.py
tests/: test_markov_tweets_japanese.py
