[tool.poetry]
name = "markov-tweets-japanese"
version = "0.1.0"
description = ""
authors = ["Daiki Ichihara <icchi314@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.56.0"
markovify = "^0.8.3"
Janome = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "markov_tweets_japanese:main"
learn = "markov_tweets_japanese:learn"
talk = "markov_tweets_japanese:talk"
